--- a/src/Component/Newsfeed/Newsfeed.css
+++ b/src/Component/Newsfeed/Newsfeed.css
@@ -4,8 +4,5 @@
     border-radius:10px;
     text-align:left;
     padding:10px;
-}
-Button{
-    margin-bottom:10px !important; 
-    padding:10px !important; 
+    text-decoration:none;
 }
